--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aegis-ai---elite-quant-&-memecoin-automator",
+  "name": "aegis-ai---elite-quant-and-memecoin-automator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "@google/genai": "1.41.0"
   },
   "devDependencies": {
